--- a/NameFixer.UseCases/NameFixer.UseCases.csproj
+++ b/NameFixer.UseCases/NameFixer.UseCases.csproj
@@ -12,9 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-            <HintPath>..\..\..\Users\JoeMamma\.dotnet\shared\Microsoft.AspNetCore.App\9.0.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-        </Reference>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1"/>
     </ItemGroup>
 
 </Project>
