--- a/NameFixer.Core/NameFixer.Core.csproj
+++ b/NameFixer.Core/NameFixer.Core.csproj
@@ -7,4 +7,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="CsvHelper" Version="33.0.1"/>
+        <PackageReference Include="Grpc.Core.Api" Version="2.67.0"/>
+        <PackageReference Include="Grpc.StatusProto" Version="2.67.0"/>
+        <PackageReference Include="JetBrains.Annotations" Version="2024.3.0"/>
+    </ItemGroup>
+
 </Project>
