--- a/NameFixer.Infrastructure/NameFixer.Infrastructure.csproj
+++ b/NameFixer.Infrastructure/NameFixer.Infrastructure.csproj
@@ -9,13 +9,9 @@
 
     <ItemGroup>
         <PackageReference Include="CsvHelper" Version="33.0.1"/>
-        <PackageReference Include="Google.Protobuf" Version="3.29.3"/>
-        <PackageReference Include="Grpc.AspNetCore.Server" Version="2.67.0"/>
-        <PackageReference Include="Grpc.Tools" Version="2.69.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="Grpc.StatusProto" Version="2.67.0"/>
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0"/>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.1"/>
         <PackageReference Include="TestableIO.System.IO.Abstractions" Version="21.2.1"/>
         <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="21.2.1"/>
     </ItemGroup>
@@ -23,22 +19,6 @@
     <ItemGroup>
         <ProjectReference Include="..\NameFixer.Core\NameFixer.Core.csproj"/>
         <ProjectReference Include="..\NameFixer.UseCases\NameFixer.UseCases.csproj"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Compile Remove="Caches\**"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <EmbeddedResource Remove="Caches\**"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Remove="Caches\**"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="FileReaderService\"/>
     </ItemGroup>
 
 </Project>
