--- a/NameFixer.UseCases/NameFixer.UseCases.csproj
+++ b/NameFixer.UseCases/NameFixer.UseCases.csproj
@@ -12,7 +12,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="2024.3.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.1"/>
+        <PackageReference Include="TestableIO.System.IO.Abstractions" Version="21.2.1"/>
     </ItemGroup>
 
 </Project>
