--- a/NameFixer.WebApi/NameFixer.WebApi.csproj
+++ b/NameFixer.WebApi/NameFixer.WebApi.csproj
@@ -7,7 +7,11 @@
         <IncludeHttpRuleProtos>true</IncludeHttpRuleProtos>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0"/>
+        <PackageReference Include="Google.Api.CommonProtos" Version="2.16.0"/>
+        <PackageReference Include="Google.Protobuf" Version="3.29.3"/>
         <PackageReference Include="Grpc.AspNetCore" Version="2.67.0"/>
+        <PackageReference Include="Grpc.StatusProto" Version="2.67.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger" Version="0.9.1"/>
     </ItemGroup>
     <ItemGroup>
