--- a/NameFixer.WebApi/appsettings.json
+++ b/NameFixer.WebApi/appsettings.json
@@ -1,32 +1,32 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug"
     }
   },
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "Protocols": "Http1AndHttp2AndHttp3"
     }
   },
   "DatasetsOptions": {
-    "FirstNameRepository": {
+    "FirstNameOptions": {
       "MinOccurrenceRate": 1000,
       "FemaleLocalPath": "../Solution Items/FemaleFirstNames.csv",
       "MaleLocalPath": "../Solution Items/MaleFirstNames.csv",
       "FemaleRemotePath": "https://api.dane.gov.pl/resources/54108,lista-imion-zenskich-w-rejestrze-pesel-stan-na-19012024-imie-pierwsze/csv",
       "MaleRemotePath": "https://api.dane.gov.pl/resources/54106,lista-imion-meskich-w-rejestrze-pesel-stan-na-19012024-imie-pierwsze/csv"
     },
-    "SecondNameRepository": {
+    "SecondNameOptions": {
       "MinOccurrenceRate": 500,
       "FemaleLocalPath": "../Solution Items/FemaleSecondNames.csv",
       "MaleLocalPath": "../Solution Items/MaleSecondNames.csv",
       "FemaleRemotePath": "https://api.dane.gov.pl/resources/54112,lista-imion-zenskich-w-rejestrze-pesel-stan-na-19012024-imie-drugie/csv",
       "MaleRemotePath": "https://api.dane.gov.pl/resources/54111,lista-imion-meskich-w-rejestrze-pesel-stan-na-19012024-imie-drugie/csv"
     },
-    "LastNameRepository": {
+    "LastNameOptions": {
       "MinOccurrenceRate": 10,
       "FemaleLocalPath": "../Solution Items/FemaleLastNames.csv",
       "MaleLocalPath": "../Solution Items/MaleLastNames.csv",
