--- a/NameFixer.WebApi/NameFixer.WebApi.csproj
+++ b/NameFixer.WebApi/NameFixer.WebApi.csproj
@@ -11,22 +11,22 @@
         <PackageReference Include="Google.Api.CommonProtos" Version="2.16.0"/>
         <PackageReference Include="Google.Protobuf" Version="3.29.3"/>
         <PackageReference Include="Grpc.AspNetCore" Version="2.67.0"/>
+        <PackageReference Include="Grpc.AspNetCore.HealthChecks" Version="2.67.0"/>
+        <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.67.0"/>
         <PackageReference Include="Grpc.StatusProto" Version="2.67.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger" Version="0.9.1"/>
     </ItemGroup>
     <ItemGroup>
-        <Content Include="..\.dockerignore">
-            <Link>.dockerignore</Link>
-        </Content>
-    </ItemGroup>
-    <ItemGroup>
-        <Protobuf Include="Protos\first_name_service.proto"/>
-        <Protobuf Include="Protos\last_name_service.proto"/>
-        <Protobuf Include="Protos\second_name_service.proto"/>
+        <Protobuf Include="Protos\first_name_service.proto" GrpcServices="Both"/>
+        <Protobuf Include="Protos\last_name_service.proto" GrpcServices="Both"/>
+        <Protobuf Include="Protos\second_name_service.proto" GrpcServices="Both"/>
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\NameFixer.Core\NameFixer.Core.csproj"/>
         <ProjectReference Include="..\NameFixer.Infrastructure\NameFixer.Infrastructure.csproj"/>
         <ProjectReference Include="..\NameFixer.UseCases\NameFixer.UseCases.csproj"/>
+    </ItemGroup>
+    <ItemGroup>
+        <InternalsVisibleTo Include="NameFixer.IntegrationTests"/>
     </ItemGroup>
 </Project>
