--- a/NameFixer.WebApi/Properties/launchSettings.json
+++ b/NameFixer.WebApi/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7180;http://localhost:5239",
+      "applicationUrl": "https://localhost:5239;http://localhost:5240;http://localhost:5241",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
