--- a/NameFixer.WebApi/appsettings.json
+++ b/NameFixer.WebApi/appsettings.json
@@ -8,7 +8,19 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http1AndHttp2AndHttp3"
+      "Protocols": "Http2"
+    },
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:5239"
+      },
+      "Http": {
+        "Url": "http://localhost:5240"
+      },
+      "Http1AndHttp2": {
+        "Url": "http://localhost:5241",
+        "Protocols": "Http1AndHttp2"
+      }
     }
   },
   "DatasetsOptions": {
